--- a/index3stylesheet.css
+++ b/index3stylesheet.css
@@ -12,7 +12,7 @@ body {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: url(pics/wp2644006.jpg);
+	background: url("pics/wp2644006.jpg");
 }
 
 /* CSS Document */
