--- a/index3stylesheet.css
+++ b/index3stylesheet.css
@@ -1,18 +1,88 @@
 @charset "utf-8";
 
-body {
+body 
+{
 	margin: 0;
 	padding: 0;
 	cursor: url("cursor (1).cur"),auto;
 }
 
-#canvas {
+#canvas 
+{
 	position: fixed;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
 	background: url("pics/wp2644006.jpg");
+}
+
+p
+{
+	color: white;
+	font-family: 'Overpass', sans-serif;
+	font-size: 100px;
+}
+
+button {
+  background: transparent;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
+  outline: 0;
+  -webkit-appearance: none;
+}
+
+button {
+  display: inline-block;
+  position: relative;
+  padding: 10px 28px;
+  top: 0;
+  font-size: 20px;
+  font-family: 'Overpass', sans-serif;
+  border-radius: 4px;
+  border-bottom: 1px solid #3E3B3B;
+  background: #3E3B3B;
+  color: white;
+  box-shadow: 0px 0px 0px rgba( 15, 165, 60, 0.1 );
+  
+  -webkit-transform: translateZ(0);
+     -moz-transform: translateZ(0);
+      -ms-transform: translateZ(0);
+          transform: translateZ(0);
+  
+  -webkit-transition: all 0.2s ease;
+     -moz-transition: all 0.2s ease;
+      -ms-transition: all 0.2s ease;
+          transition: all 0.2s ease;
+}
+
+button:hover {
+  top: -10px;
+  box-shadow: 0px 10px 10px rgba( 15, 165, 60, 0.2 );
+  
+  -webkit-transform: rotateX(20deg);
+     -moz-transform: rotateX(20deg);
+      -ms-transform: rotateX(20deg);
+          transform: rotateX(20deg);
+}
+
+button:active {
+  top: 0px;
+  box-shadow: 0px 0px 0px rgba( 15, 165, 60, 0.0 );
+  background: #3E3B3B;
+}
+
+.next
+{
+	position: absolute;
+	margin: 620px 0 0 1300px;
+}
+
+.home
+{
+	position: absolute;
+	margin: 620px 0 0 130px;
 }
 
 /* CSS Document */
